--- a/WebContent/html5/newbook.html
+++ b/WebContent/html5/newbook.html
@@ -3,42 +3,38 @@
 <head>
 <meta charset="UTF-8">
 <title>Insert title here</title>
-<link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
-    <script src="js/jquery/jquery-2.1.4.min.js" type="text/javascript"></script>
-    <script src="js/jquery/jquery.serializejson.js" type="text/javascript"></script>
+<link href="../css/bootstrap.min.css" rel="stylesheet" media="screen">
+    <script src="../js/jquery/jquery-2.1.4.min.js" type="text/javascript"></script>
+    <script src="../js/jquery/jquery.serializejson.js" type="text/javascript"></script>
   
 </head>
 <body>
 
 <h2>Novo Livro</h2>
 
-	<form id="newbookform">
+	<form id="newbookform" action="../bookstore/book/createform" method="GET">
 	    <div class="form-group">	
         <label >id</label>
-        <input class="form-control" type="text" name='id' id='id'/>
+        <input class="form-control" type="text" name="id" id="id"/>
         </div>
         <div class="form-group">
         <label >author</label>
         <input class="form-control" type="text" name='author' id='author' />
         </div>
         <div class="form-group">
-        <label >collection</label>
-        <input class="form-control" type="text" name='collection' id='collection'/> 
-        </div>
-        <div class="form-group">
-        <label >other</label>
-        <input class="form-control" type="text" name='other' id='other' />
-        </div>
-        <div class="form-group">
         <label >title</label>
-        <input class="form-control" type="text" name='title' id='title' />
+        <input class="form-control" type="text" name='title' id='collection'/> 
         </div>
         <div class="form-group">
-        <label >reader</label>
-        <input class="form-control" type="text" name='reader' id='reader' />
-  		</div>
+        <label >publisher</label>
+        <input class="form-control" type="text" name='publisher' id='other' />
+        </div>
+        <div class="form-group">
+        <label >price</label>
+        <input class="form-control" type="text" name='price' id='title' />
+        </div>
   		<div class="form-group">
-  		<button type="submit" class="btn" onclick="save()">Save</button>
+  		<button type="submit">Save</button>
   		</div>
       </form>
     
