--- a/WebContent/html5/newbook.html
+++ b/WebContent/html5/newbook.html
@@ -3,6 +3,8 @@
 <head>
 <meta charset="UTF-8">
 <title>Insert title here</title>
+
+<link href="../css/main.css" rel="stylesheet" media="screen">
 <link href="../css/bootstrap.min.css" rel="stylesheet" media="screen">
     <script src="../js/jquery/jquery-2.1.4.min.js" type="text/javascript"></script>
     <script src="../js/jquery/jquery.serializejson.js" type="text/javascript"></script>
