--- a/WebContent/html5/newbook.html
+++ b/WebContent/html5/newbook.html
@@ -14,7 +14,7 @@
 
 <h2>Novo Livro</h2>
 
-	<form id="newbookform" action="../bookstore/book/createform" method="GET">
+	<form id="newbookform" action="../VQ/book/createform" method="GET">
 	    <div class="form-group">	
         <label >id</label>
         <input class="form-control" type="text" name="id" id="id"/>
