--- a/WebContent/html5/newproduto.html
+++ b/WebContent/html5/newproduto.html
@@ -9,33 +9,33 @@
     </head>
     <body>
         <div class="container">
-            <form class="form-horizontal" action="../VirtualQueue/produto/createform" method="GET">
+            <form class="form-horizontal" action="../VQ/produto/createform" method="GET">
                 <div class="form-group">
-                    <label for="inputID">Código</label>
+                    <label for="inputID" style="margin-top:6px;">Código</label>
                     <div class="col-sm-5">                        
                         <input type="text" class="form-control" id="cod_produto" name="cod_produto" placeholder="Código aqui ...">
                     </div>
                 </div>
                 <div class="form-group">
-                    <label for="inputName">Nome</label>
+                    <label for="inputName" style="margin-top:6px;">Nome</label>
                     <div class="col-sm-5">                  
                         <input type="text" class="form-control" id="nome" name="nome" placeholder="Nome do produto aqui ...">
                     </div>
                 </div>
                 <div class="form-group">
-                    <label for="inputDescription">Descrição do produto</label>
+                    <label for="inputDescription" style="margin-top:6px;">Descrição do produto</label>
                     <div class="col-sm-5">                   
                         <input type="text" class="form-control" id="descricao" name="descricao" placeholder="Descreva o produto aqui ..">
                     </div>
                 </div>
                 <div class="form-group">
-                    <label for="inputCategory">Categoria</label>
+                    <label for="inputCategory" style="margin-top:6px;">Categoria</label>
                     <div class="col-sm-5">                  
                         <input type="text" class="form-control" id="tipo" name="tipo" placeholder="Categoria do seu produto ...">
                     </div>
                 </div>
                 <div class="form-group">
-                    <label for="inputPrice">Valor</label>
+                    <label for="inputPrice" style="margin-top:6px;">Valor</label>
                     <div class="col-sm-5">                    
                         <input type="text" class="form-control" id="preco" name="preco" placeholder="Valor do produto ...">                        
                     </div>                   
