--- a/WebContent/html5/newpedido.html
+++ b/WebContent/html5/newpedido.html
@@ -79,12 +79,11 @@
 						url : "http://localhost:8080/VirtualQueue/VQ/produto/list",
 						data : produtos, //array produtos
 						success : function(data) {
-							var q = '<select name="idCombox2" id="idCombox2" class="form-control"> <option value="0"><-- Selecione o Produto --></option>';
+							var q = '<select name="idCombox2" id="idCombox2" class="form-control"> <option value="0"><-- Selecione um Produto --></option>';
 							for (i = 0; i < data.length; i++) {
 								q += '<option value=' + i + '>'
 										+ data[i].nome
 										+ '</option>';
-										alert(data[i]);
 							}
 							q += '</select>';
 							$('#div1').html(q);
@@ -94,55 +93,42 @@
 		}
 		
 		function carregaProduto(data) {
-			alert(JSON.stringify(data));
 			produtos = data;
 			// gerar Combo dos Produtos
 		}
 
 		function addProduto() {
-
-			/*private int cod_produto;
-			private String nome;
-			private String descricao;
-			private String tipo;
-			private double preco;*/
-
-			var produto = new Object();
-			produto.cod_produto = "";
-			produto.nome = "";
-			produto.descricao = "";
-			produto.tipo = "";
-			produto.preco = "";
-			pedido.push(produto);
-
+			
 			var table = document.getElementById("myTable");
 			var row = table.insertRow(1);
 			var cell1 = row.insertCell(0);
 			var cell2 = row.insertCell(1);
 			var cell3 = row.insertCell(2);
+			var selecionado = document.getElementById("idCombox2").value;
 			cell1.innerHTML = produtos[document.getElementById("idCombox2").value].cod_produto;
 			cell2.innerHTML = produtos[document.getElementById("idCombox2").value].nome;
-			cell3.innerHTML = produtos[document.getElementById("idCombox2").value].preco;
+			cell3.innerHTML = "R$ "+produtos[document.getElementById("idCombox2").value].preco+",00";
+			pedido.push(produtos[selecionado]);
 		}
 
 		function fechar_pedido() {
-			/*
+			
 			$.ajax({
 			     type: "POST",
-			     url: "http://192.241.171.69:8080/Book/webresources/com.percivallucena.book.book/",
+			     url: "http://localhost:8080/VirtualQueue/VQ/pedido/pedidocreate",
 			     data: JSON.stringify(pedido),
 			     contentType: "application/json; charset=utf-8",
 			     dataType: "json",
 			     processData: true,
 			     success: function (vdata, status, jqXHR) {
-			         alert("book has been added to wishlist");
+			         alert("Pedido Enviado com Sucesso");
 			     },
 			     error: function (xhr) {
-			         alert("error" + xhr.responseText);
+			         alert("Erro" + xhr.responseText);
 			     }
 			 });
-			 */
-			alert(JSON.stringify(pedido));
+			 
+			//alert(JSON.stringify(pedido));
 		}
 	</script>
 </body>
