--- a/WebContent/html5/newpedido.html
+++ b/WebContent/html5/newpedido.html
@@ -6,13 +6,11 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 <script src="../js/jquery/jquery-2.1.4.min.js" type="text/javascript"></script>
-<script src="../js/jquery/jquery.serializejson.js"
-	type="text/javascript"></script>
-
+<script src="../js/jquery/jquery.serializejson.js"	type="text/javascript"></script>
 </head>
 <body>
 	<div class="container">
-		<h2>Pedido</h2></br>
+		<h2>Pedido</h2><br>
 		<div class="form-group">
 			<div class="form-group" id="div1"></div>
 		</div>
@@ -34,6 +32,9 @@
 		</div>
 		<div class="form-group" style="float:right;">
 			<h4><label class="col-rm-10" id="total">Total: R$0,00</label></h4>
+		</div><br>
+		<div class="form-group" style="float:right;">
+			<h4><label class="col-rm-10" id="senha">Senha: </label></h4>
 		</div>
 		 
 		<div class="form-group">
@@ -52,16 +53,16 @@
 		
 		lista();
 		populaCombo();
+		gerar_senha();
 		
 		function lista() {
 			var gbWS = "http://localhost:8080/VirtualQueue/VQ/produto/list";
-			// faz chamda ao WS REST via ajax	
 			$.ajax({
 				type : 'GET',
 				url : gbWS,
 				crossDomain : true,
 				dataType : "json",
-				success : carregaProduto, // função de retorno do WS
+				success : carregaProduto, // função de retorno dos produtos
 				error : function(xhr, status, error) {
 					var err = eval("(" + xhr.responseText + ")");
 					alert(err.Message);
@@ -70,13 +71,14 @@
 		}
 
 		function populaCombo() {
+			//Popula a combobox com produtos do banco de dados
 			$(document).ready(function() {
 					$.ajax({
 						dataType : 'json',
 						url : "http://localhost:8080/VirtualQueue/VQ/produto/list",
 						data : produtos, //array produtos
 						success : function(data) {
-							var q = '<select name="idCombox2" id="idCombox2" class="form-control"> <option value="0"><-- Selecione um Produto --></option>';
+							var q = '<select name="idCombox2" id="idCombox2" class="form-control"> <option value="-1"><-- Selecione um Produto --></option>';
 							for (i = 0; i < data.length; i++) {
 								q += '<option value=' + i + '>'
 										+ data[i].nome
@@ -95,21 +97,26 @@
 		}
 
 		function addProduto() {
-			
-			var table = document.getElementById("myTable");
-			var row = table.insertRow(1);
-			var cell1 = row.insertCell(0);
-			var cell2 = row.insertCell(1);
-			var cell3 = row.insertCell(2);
+			//Adiciona um produto da combobox na tabela de pedido
 			var selecionado = document.getElementById("idCombox2").value;
-			cell1.innerHTML = produtos[selecionado].cod_produto;
-			cell2.innerHTML = produtos[selecionado].nome;
-			cell3.innerHTML = "R$ "+produtos[selecionado].preco+",00";
-			pedido.push(produtos[selecionado]);
+			if (selecionado == -1) {
+				alert("Por favor, selecione um produto...");
+			} else {
+				var table = document.getElementById("myTable");
+				var row = table.insertRow(1);
+				var cell1 = row.insertCell(0);
+				var cell2 = row.insertCell(1);
+				var cell3 = row.insertCell(2);
+				
+				cell1.innerHTML = produtos[selecionado].cod_produto;
+				cell2.innerHTML = produtos[selecionado].nome;
+				cell3.innerHTML = "R$ "+produtos[selecionado].preco+",00";
+				pedido.push(produtos[selecionado]);
+			}
 		}
 
 		function fechar_pedido() {
-			
+			//Finaliza e envia o Pedido
 			$.ajax({
 			     type: "POST",
 			     url: "http://localhost:8080/VirtualQueue/VQ/pedido/pedidocreate",
@@ -129,6 +136,7 @@
 		}
 		
 		function total_pedido(){
+			//Realiza a soma dos pedidos da tabela e atualiza o valor total do pedido
 			var soma = 0;
 			for (var int = 0; int < pedido.length; int++) {
 				soma += pedido[int].preco;
@@ -136,6 +144,11 @@
 			$("#total").html("TOTAL: R$ "+soma);
 		}
 		
+		function gerar_senha(){
+			//Gera uma senha randomica automaticamente
+			var senha = Math.floor((Math.random() * 10)+1);
+			$("#senha").html("Senha: "+senha);
+		}
 	</script>
 </body>
 </html>
