--- a/WebContent/html5/newpedido.html
+++ b/WebContent/html5/newpedido.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-<title>VirtualQueue</title>
+<title>Virtual Queue</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 <script src="../js/jquery/jquery-2.1.4.min.js" type="text/javascript"></script>
 <script src="../js/jquery/jquery.serializejson.js"	type="text/javascript"></script>
 </head>
-<body>
+<body onload="updateClock()">
 	<div class="container">
 		<h2>Pedido</h2><br>
 		<div class="form-group">
@@ -16,8 +16,7 @@
 		</div>
 		<div class="form-group">
 			<div class="col-sm-offset">
-				<input type="submit" class="btn btn-default" value="Adicionar"
-					onclick="addProduto();total_pedido();" style="margin-top: 10px;">
+				<input type="submit" class="btn btn-default" value="Adicionar" onclick="addProduto();total_pedido();" style="margin-top: 10px;">
 			</div>
 		</div>
 
@@ -32,11 +31,10 @@
 		</div>
 		<div class="form-group" style="float:right;">
 			<h4><label class="col-rm-10" id="total">Total: R$0,00</label></h4>
-		</div><br>
-		<div class="form-group" style="float:right;">
 			<h4><label class="col-rm-10" id="senha">Senha: </label></h4>
+			<h4><label class="col-rm-10" id="clock">Data</label></h4>
 		</div>
-		 
+				 
 		<div class="form-group">
 			<div class="col-sm-offset">
 				<input type="submit" class="btn btn-default"
@@ -45,16 +43,15 @@
 			</div>
 		</div>
 	</div>
-
-
 	<script>
+		//Cria arrays de pedido e produtos
 		var pedido = [];
 		var produtos = [];
-		
+		//Chama as funções
 		lista();
 		populaCombo();
 		gerar_senha();
-		
+				
 		function lista() {
 			var gbWS = "http://localhost:8080/VirtualQueue/VQ/produto/list";
 			$.ajax({
@@ -146,9 +143,31 @@
 		
 		function gerar_senha(){
 			//Gera uma senha randomica automaticamente
-			var senha = Math.floor((Math.random() * 10)+1);
+			var senha = Math.floor((Math.random() * 100)+1);
 			$("#senha").html("Senha: "+senha);
 		}
+		
+		function updateClock(){
+		 	var currentTime = new Date ( );
+		  	var currentHours = currentTime.getHours ( );
+		  	var currentMinutes = currentTime.getMinutes ( );
+		  	var currentSeconds = currentTime.getSeconds ( );
+		  	// Pad the minutes and seconds with leading zeros, if required
+		  	currentMinutes = ( currentMinutes < 10 ? "0" : "" ) + currentMinutes;
+		  	currentSeconds = ( currentSeconds < 10 ? "0" : "" ) + currentSeconds;
+		  	// Choose either "AM" or "PM" as appropriate
+		  	var timeOfDay = ( currentHours < 12 ) ? "AM" : "PM";
+		  	// Convert the hours component to 12-hour format if needed
+		  	currentHours = ( currentHours > 12 ) ? currentHours - 12 : currentHours;
+		  	// Convert an hours component of "0" to "12"
+		  	currentHours = ( currentHours == 0 ) ? 12 : currentHours;
+		  	// Compose the string for display
+		  	var currentTimeString = currentHours + ":" + currentMinutes + ":" + currentSeconds + " " + timeOfDay;
+		$("#clock").html(currentTimeString);
+	}
+	$(document).ready(function(){
+	   setInterval('updateClock()', 1000);
+	});
 	</script>
 </body>
 </html>
