--- a/WebContent/html5/produtos.html
+++ b/WebContent/html5/produtos.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="UTF-8"><title>Insert title here</title>
+<meta charset="UTF-8"><title>Virtual Queue</title>
 </head>
 <body>
 
