--- a/WebContent/html5/newpedido.html
+++ b/WebContent/html5/newpedido.html
@@ -9,6 +9,7 @@
 <script src="../js/jquery/jquery.serializejson.js"	type="text/javascript"></script>
 </head>
 <body onload="updateClock()">
+	<div id="header"></div>
 	<div class="container">
 		<h2>Pedido</h2><br>
 		<div class="form-group">
@@ -177,6 +178,11 @@
 	function verifica_pedido(){
 		alert(JSON.stringify(pedido));
 	}
+	
+	$(document).ready(function(){
+		$("#header").load('menu.html');
+	});
+	
 	</script>
 </body>
 </html>
