--- a/WebContent/html5/newproduto.html
+++ b/WebContent/html5/newproduto.html
@@ -3,10 +3,13 @@
     <head>
         <title>Virtual Queue</title>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+		<script src="../js/jquery/jquery-2.1.4.min.js" type="text/javascript"></script>
+		<script src="../js/jquery/jquery.serializejson.js"	type="text/javascript"></script>
     </head>
     <body>
+    	<div id="header"></div>
         <div class="container">
             <form class="form-horizontal" action="../VQ/produto/createform" method="GET">
                 <div class="form-group">
@@ -46,5 +49,10 @@
                 </div>
             </form>
         </div>
+    <script type="text/javascript">
+    $(document).ready(function(){
+		$("#header").load('menu.html');
+	});
+    </script>
     </body>
 </html>
