--- a/WebContent/html5/newproduto.html
+++ b/WebContent/html5/newproduto.html
@@ -49,9 +49,11 @@
                 </div>
             </form>
         </div>
+        <div id="footer"></div>
     <script type="text/javascript">
     $(document).ready(function(){
 		$("#header").load('menu.html');
+		$("#footer").load('footer.html');
 	});
     </script>
     </body>
