--- a/WebContent/html5/produtos.html
+++ b/WebContent/html5/produtos.html
@@ -30,6 +30,7 @@
   </tbody>
 </table>
 </div>
+<div id="footer"></div>
 <script>
 $.ajax({
   url: '/VirtualQueue/VQ/produto/list',
@@ -44,6 +45,7 @@ $.ajax({
 
 $(document).ready(function(){
 	$("#header").load('menu.html');
+	$("#footer").load('footer.html');
 });
 </script>
 </body>
