--- a/WebContent/html5/newpedido.html
+++ b/WebContent/html5/newpedido.html
@@ -41,7 +41,8 @@
 			</div>
 		</div>
 			<input type="submit" class="btn btn-default" value="Ver Dados Pedido" onclick="verifica_pedido()"	style="margin-top: 10px;">
-	</div>
+		</div>
+		<div id="footer"></div>
 	<script>
 		//Cria arrays de pedido e produtos
 		var pedido = [];
@@ -181,6 +182,7 @@
 	
 	$(document).ready(function(){
 		$("#header").load('menu.html');
+		$("#footer").load('footer.html');		
 	});
 	
 	</script>
