--- a/WebContent/html5/newpedido.html
+++ b/WebContent/html5/newpedido.html
@@ -28,10 +28,15 @@
 					<th>Preço</th>
 					<th>Remover</th>
 				</tr>
+				<tr>
+					<td></td>
+					<td></td>
+					<td><b>Total: </b></td>
+					<td id="total"><b>R$0,00</b></td>
+				</tr>
 			</table>
 		</div>
 		<div class="form-group" style="float:right;">
-			<h4><label class="col-rm-10" id="total">Total: R$0,00</label></h4>
 			<h4><label class="col-rm-10" id="senha">Senha: </label></h4>
 			<h4><label class="col-rm-10" id="clock">Data: </label></h4>
 		</div>
@@ -47,7 +52,8 @@
 		//Cria arrays de pedido e produtos
 		var pedido = [];
 		var produtos = [];
-
+		var soma = 0;
+		
 		//Chama as funções
 		lista();
 		populaCombo();
@@ -110,7 +116,7 @@
 				cell1.innerHTML = produtos[selecionado].cod_produto;
 				cell2.innerHTML = produtos[selecionado].nome;
 				cell3.innerHTML = "R$ "+produtos[selecionado].preco+",00";
-				cell4.innerHTML = "<a href='#' class='delete' value='"+produtos[selecionado].cod_produto+"'><img src='../img/x.png' onclick='removeProduto("+selecionado+");total_pedido();' height='15' width='15'></a>";
+				cell4.innerHTML = "<a href='#' class='delete' value='"+produtos[selecionado].cod_produto+"'><img src='../img/x.png' onclick='removeProduto("+selecionado+");"+total_pedido(selecionado)+";' height='15' width='15'></a>";
 				pedido[selecionado] = produtos[selecionado];
 			}
 		}
@@ -123,8 +129,16 @@
 			    });
 			    /* pedido[remove] = null; */
 			    delete (pedido[remove]);
+			    soma = soma - produtos[remove].preco;
+			    $("#total").html("R$ "+soma);
 		}
-
+		
+		function total_pedido(preco){
+			//Realiza a soma dos pedidos da tabela e atualiza o valor total do pedido
+			soma += produtos[preco].preco;
+			$("#total").html("R$ "+soma);
+		}
+		
 		function fechar_pedido() {
 			//Finaliza e envia o Pedido
 			$.ajax({
@@ -145,16 +159,7 @@
 			//alert(JSON.stringify(pedido));
 		}
 		
-		function total_pedido(){
-			//Realiza a soma dos pedidos da tabela e atualiza o valor total do pedido
-			var soma = 0;
-			for (var int = 0; int < pedido.length; int++) {
-				soma += pedido[int].preco;
-			}
-			$("#total").html("TOTAL: R$ "+soma);
-		}
-		
-		function gerar_senha(){
+				function gerar_senha(){
 			//Gera uma senha randomica automaticamente
 			var senha = Math.floor((Math.random() * 100)+1);
 			$("#senha").html("Senha: "+senha);
@@ -177,12 +182,13 @@
 	});
 	
 	function verifica_pedido(){
+		//Botão para checar o json que será mandado ao PedidoWebService
 		alert(JSON.stringify(pedido));
 	}
 	
 	$(document).ready(function(){
-		$("#header").load('menu.html');
-		$("#footer").load('footer.html');		
+		$("#header").load('menu.html'); //Inclui o menu no topo da página
+		$("#footer").load('footer.html'); //Inclui o footer
 	});
 	
 	</script>
