--- a/WebContent/html5/menu.html
+++ b/WebContent/html5/menu.html
@@ -43,14 +43,14 @@
                     <li><a class="principal">HOME</a></li>
                     <li><a class="principal">PRODUTO</a>
                         <ul>
-                            <li><a class="sub" href="newproduto.html">CADASTRO DE PRODUTO</a></li>
-                            <li><a class="sub" href="produtos.html">LISTRAR PRODUTO</a></li>
+                            <li><a class="sub" href="newproduto.html">CADASTRO DE PRODUTOS</a></li>
+                            <li><a class="sub" href="produtos.html">LISTAR PRODUTOS</a></li>
                         </ul>
                     </li>
                     <li><a class="principal">PEDIDO</a>
                         <ul>
                             <li><a class="sub" href="newpedido.html">GERAR PEDIDO</a></li>
-                            <li><a class="sub" href="#">LISTAR PEDIDO</a></li>
+                            <li><a class="sub" href="#">LISTAR PEDIDOS</a></li>
                         </ul>
                     </li>                               
                 </ul>
