--- a/WebContent/html5/footer.html
+++ b/WebContent/html5/footer.html
@@ -18,7 +18,7 @@
         <body>    
             <div class="footer">
 	            <h3 style="color:#fff; font-family: 'Oswald', arial, sans-serif;">Copyright © 2015</h3>
-	            <label class="autor" style="color:#fff; letter-spacing:1px; font-family:sans-serif;">Matheus S Hofart | Gabriel Tagliari Rodrigo | Elisa P. Battaglini</label>
+	            <label class="autor" style="color:#fff; letter-spacing:1px; font-family:sans-serif;">Matheus S. Hofart | Gabriel Tagliari Rodrigo | Elisa P. Battaglini</label>
         	</div>
     </body>
 </html>
