--- a/WebContent/html5/produtos.html
+++ b/WebContent/html5/produtos.html
@@ -12,7 +12,8 @@
 </head>
 <body>
 <div id="header"></div>
-<div class="container"></div>
+<div class="container">
+<div><h2>Lista de Produtos</h2><br></div>
 <div>
 <table id="my-table" class="table table-condensed">
   <thead>
@@ -27,6 +28,7 @@
   <tbody>
   </tbody>
 </table>
+</div>
 </div>
 <div id="footer"></div>
 <script>
