--- a/WebContent/html5/newproduto.html
+++ b/WebContent/html5/newproduto.html
@@ -12,7 +12,7 @@
     	<div id="header"></div>
         <div class="container">
         	<div><h2>Cadastro de Produtos</h2><br></div>
-         	<form class="form-horizontal" action="../VQ/produto/createform" method="GET">
+         	<form id="form" class="form-horizontal" action="../VQ/produto/createform" method="GET">
                 <div class="form-group">
                     <label for="inputID" style="margin-top:6px;">Código</label>
                     <div class="col-sm-5">                        
@@ -48,6 +48,11 @@
                         <input type="submit" class="btn btn-default" value="Salvar">
                     </div>
                 </div>
+                <div class="form-group">
+                    <div class="col-sm-offset col-sm-5">
+                        <input type="submit" class="btn btn-default" value="Limpar Formulário" onclick="limpa_form()">
+                    </div>
+                </div>
             </form>
         </div>
         <div id="footer"></div>
@@ -56,6 +61,14 @@
 		$("#header").load('menu.html');
 		$("#footer").load('footer.html');
 	});
+    
+    function limpa_form(){	
+    	$(':input','#form')
+    	 .not(':button, :submit, :reset, :hidden')
+    	 .val('')
+    	 .removeAttr('checked')
+    	 .removeAttr('selected');
+    }
     </script>
     </body>
 </html>
