--- a/WebContent/html5/menu.html
+++ b/WebContent/html5/menu.html
@@ -35,7 +35,7 @@
     </head>
     <body>
         <div class="background">
-            <nav style="background-color:#191919; padding: 30px;"></nav>
+            <nav style="background-color:#585858; padding: 30px; box-shadow:0px 2px 10px #000;"></nav>
         </div>
         <div class="container">
             <nav class="menu">
