--- a/WebContent/html5/footer.html
+++ b/WebContent/html5/footer.html
@@ -11,14 +11,14 @@
         <style>
             @import url(http://fonts.googleapis.com/css?family=Lora|Oswald);
             * {margin:0px; padding:0px;  }
-            .footer {position:absolute; bottom:0; width:100%;height:100px;
-                     background-color:black; padding:10px; text-align:center;}
+            .footer {position:fixed; bottom:0; width:100%;height:70px;
+                     background-color:#E0E0E0; padding:10px; text-align:center;}
             </style>
         </head>
         <body>    
             <div class="footer">
-	            <h3 style="color:#fff; font-family: 'Oswald', arial, sans-serif;">Copyright © 2015</h3>
-	            <label class="autor" style="color:#fff; letter-spacing:1px; font-family:sans-serif;">Matheus S. Hofart | Gabriel Tagliari Rodrigo | Elisa B. D. Pereira</label>
+	            <h5 style="color:#000; font-family: 'Oswald', arial, sans-serif;">Copyright © 2015</h5>
+	            <label class="autor" style="color:#000; letter-spacing:1px; font-family:sans-serif; font-size: 10px;">Matheus S. Hofart | Gabriel Tagliari Rodrigo | Elisa B. D. Pereira</label>
         	</div>
     </body>
 </html>
