--- a/WebContent/html5/login.html
+++ b/WebContent/html5/login.html
@@ -9,7 +9,7 @@
 <script src="../js/jquery/jquery-2.1.4.min.js" type="text/javascript"></script>
 <script src="../js/jquery/jquery.serializejson.js" type="text/javascript"></script>
   </head>
-  <body>
+  <body style="background-color: #F0F0F0">
     <div class="container-fluid">
 	<div class="row">
 		<div class="col-md-12">
