--- a/WebContent/html5/newpedido.html
+++ b/WebContent/html5/newpedido.html
@@ -8,7 +8,7 @@
 <script src="../js/jquery/jquery-2.1.4.min.js" type="text/javascript"></script>
 <script src="../js/jquery/jquery.serializejson.js"	type="text/javascript"></script>
 </head>
-<body onload="updateClock()">
+<body onload="updateClock()" style="background-color: #F0F0F0">
 	<div id="header"></div>
 	<div class="container">
 		<h2>Pedido</h2><br>
@@ -21,7 +21,7 @@
 			</div>
 		</div>
 		<div class="">
-			<table id="myTable" border="1" class="table table-hover">
+			<table id="myTable" border="1" class="table table-hover" style="background-color: #fff;">
 				<tr style="background-color:#F8F8F8;">
 					<th>Código</th>
 					<th>Nome</th>
@@ -49,6 +49,7 @@
 		</div>
 			<input type="submit" class="btn btn-default" value="Ver Dados Pedido" onclick="verifica_pedido()"	style="margin-top: 10px;">
 		</div>
+		<br><br><br><br><br><br>
 		<div id="footer"></div>
 	<script>
 		//Cria arrays de pedido e produtos
@@ -159,8 +160,8 @@
 			         alert("Erro" + xhr.responseText);
 			     }
 			 });
-			 
-			//alert(JSON.stringify(pedido));
+			
+			alert(JSON.stringify(pedido));
 		}
 		
 		function gerar_senha(){
