--- a/WebContent/html5/newproduto.html
+++ b/WebContent/html5/newproduto.html
@@ -8,7 +8,7 @@
 		<script src="../js/jquery/jquery-2.1.4.min.js" type="text/javascript"></script>
 		<script src="../js/jquery/jquery.serializejson.js"	type="text/javascript"></script>
     </head>
-    <body>
+    <body style="background-color: #F0F0F0">
     	<div id="header"></div>
         <div class="container">
         	<div><h2>Cadastro de Produtos</h2><br></div>
