--- a/WebContent/html5/produtos.html
+++ b/WebContent/html5/produtos.html
@@ -18,7 +18,7 @@
 <table id="my-table" class="table table-condensed">
   <thead>
   	<tr>
-  		<th style="color: #000000;">Cod_produto</th>
+  		<th style="color: #000000;">Id</th>
     	<th>Nome</th>
     	<th>Descricao</th>
     	<th>Tipo</th>
