--- a/WebContent/html5/footer.html
+++ b/WebContent/html5/footer.html
@@ -12,7 +12,7 @@
             @import url(http://fonts.googleapis.com/css?family=Lora|Oswald);
             * {margin:0px; padding:0px;  }
             .footer {position:fixed; bottom:0; width:100%;height:70px;
-                     background-color:#E0E0E0; padding:10px; text-align:center;}
+                     background-color:#F0F0F0; padding:10px; text-align:center;}
             </style>
         </head>
         <body>    
