--- a/WebContent/html5/menu.html
+++ b/WebContent/html5/menu.html
@@ -50,7 +50,7 @@
                     <li><a class="principal">PEDIDO</a>
                         <ul>
                             <li><a class="sub" href="newpedido.html">GERAR PEDIDO</a></li>
-                            <li><a class="sub" href="#">LISTAR PEDIDOS</a></li>
+                            <li><a class="sub" href="pedidos.html">LISTAR PEDIDOS</a></li>
                         </ul>
                     </li>                               
                 </ul>
